--- a/index.html
+++ b/index.html
@@ -6,6 +6,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="styles.css">
     <title>Gökay Kalkan - Geomatic Engineer</title>
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css">
+
 </head>
 
 <body>
@@ -66,13 +68,19 @@
             </p>
             <div class="contact-info">
                 <div class="contact-item">
-                    <a href="https://github.com/21833212" target="_blank">GitHub</a>
+                    <a href="https://github.com/21833212" target="_blank">
+                        <i class="fab fa-github"></i> GitHub
+                    </a>
                 </div>
                 <div class="contact-item">
-                    <a href="https://www.instagram.com/gokaykalkan/" target="_blank">Instagram</a>
+                    <a href="https://www.instagram.com/gokaykalkan/" target="_blank">
+                        <i class="fab fa-instagram"></i> Instagram
+                    </a>
                 </div>
                 <div class="contact-item">
-                    <a href="mailto:gokay_kalkan20@hotmail.com">E-posta</a>
+                    <a href="mailto:gokay_kalkan20@hotmail.com">
+                        <i class="fas fa-envelope"></i> E-posta
+                    </a>
                 </div>
             </div>
         </div>
