--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
     <section id="about">
         <div class="about-container">
             <div class="about-text">
-                <h2>Hakkında</h2>
+                <h2>About</h2>
                 <p> I was born on January 1, 2000. I live in Ankara. I am from Denizli and I live there with my family.
                     I am currently studying Geomatics Engineering at Hacettepe University. I have beginner level
                     knowledge in various programming languages. I have practical experience in GPS applications,
@@ -63,8 +63,8 @@
 
     <section id="contact">
         <div class="container">
-            <h2>İletişim</h2>
-            <p>Benimle iletişime geçmek için aşağıdaki sosyal medya hesaplarını ve e-posta adresimi kullanabilirsiniz:
+            <h2>Contact</h2>
+            <p>You can use the following social media accounts and my e-mail address to contact me.:
             </p>
             <div class="contact-info">
                 <div class="contact-item">
@@ -79,7 +79,7 @@
                 </div>
                 <div class="contact-item">
                     <a href="mailto:gokay_kalkan20@hotmail.com">
-                        <i class="fas fa-envelope"></i> E-posta
+                        <i class="fas fa-envelope"></i> E-mail
                     </a>
                 </div>
             </div>
@@ -88,7 +88,7 @@
 
     <footer class="footer">
         <div class="footer-container">
-            <p>© 2024 Gökay Kalkan. Tüm hakları saklıdır.</p>
+            <p>© 2024 Gökay Kalkan. All Rights Reserved.</p>
 
         </div>
     </footer>
