--- a/index.html
+++ b/index.html
@@ -53,7 +53,7 @@
                     expropriation, and creating map-based websites. I am also successful in my approach to quickly
                     adapting to business organization and workplace strategies and problem solving. I am trying to
                     improve myself in Surveying Engineering.</p>
-                <a href="cv.pdf" class="download-button" target="_blank" download>CV'yi İndir</a>
+                <a href="cv.pdf" class="download-button" target="_blank" download>Download CV</a>
             </div>
             <div class="about-photo">
                 <img src="2.jpeg" alt="Gökay Kalkan" class="profile-photo">
